--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,45 +3,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.isseiaoki.simplecropview.CropImageView
-        android:id="@+id/cropImageView"
-        xmlns:custom="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:padding="16dp"
-        custom:cropMode="ratio_free"
-        custom:initialFrameScale="0.5"
-        />
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:id="@+id/crop_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CROP"
-            android:onClick="onClick"
-            />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SAVE"
-            android:id="@+id/saveButton"
-            android:onClick="onClick"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-
-    </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/croppedImageView"
-        android:layout_margin="16dp"
-        android:layout_gravity="center"
+    <com.dd.morphingbutton.MorphingButton
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_unknown"
+        android:text="Unknown Image"
+        android:onClick="onClick"
+        android:textColor="@color/mb_gray"/>
 
 </LinearLayout>
