Started on inventoryStatus

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -6,9 +7,19 @@
     <com.dd.morphingbutton.MorphingButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_unknown"
+        android:id="@+id/btn_showUnknown"
         android:text="Unknown Image"
         android:onClick="onClick"
-        android:textColor="@color/mb_gray"/>
+        android:textColor="@android:color/white"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
-</LinearLayout>
+    <com.dd.morphingbutton.MorphingButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Inventory"
+        android:id="@+id/btn_showInventory"
+        android:textColor="@android:color/white"
+        android:onClick="onClick"/>
+
+</RelativeLayout>
