InventoryStatus is done! Can be animated to look cooler!

--- a/app/src/main/res/layout-port/activity_inventory_status.xml
+++ b/app/src/main/res/layout-port/activity_inventory_status.xml
@@ -6,12 +6,12 @@
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:layout_width="wrap_content"
+    <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView_inventory"
-        android:visibility="visible" />
+        android:id="@+id/listView_itemList"
+        android:clickable="false">
+    </ListView>
 
 
 </LinearLayout>
