--- a/app/src/main/res/layout/dialog_save.xml
+++ b/app/src/main/res/layout/dialog_save.xml
@@ -4,9 +4,16 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="What is this objects name?"
+        android:id="@+id/textView_dialogTitle" />
+
     <EditText
         android:layout_width="fill_parent"
         android:layout_height="70dp"
-        android:id="@+id/userInput" />
+        android:id="@+id/editText_userInput" />
 
 </LinearLayout>
