--- a/app/src/main/res/layout-port/image_cropper_activity.xml
+++ b/app/src/main/res/layout-port/image_cropper_activity.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Small Text"
+            android:text=""
             android:id="@+id/textView_UnderPhoto"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
