--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,5 +5,5 @@
     <item
         android:id="@+id/action_refresh"
         android:orderInCategory="100"
-        android:title="Refresh" />
+        android:title="@string/refresh" />
 </menu>
